init backend (Spring Boot)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,19 @@ rag.rag.max-chars-per-chunk=1200
 # application.properties
 rag.ollama.chat-model=qwen2.5:3b-instruct
 # rag.ollama.chat-model=tinyllama
+# Ollama
+
+
+# RAG
+rag.rag.topk=3
+rag.rag.max-context-chars=1200
+
+
+# Spring async/stream
+spring.mvc.async.request-timeout=-1
+server.tomcat.connection-timeout=300000
+
+
 
 
 
